--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-sass": "^2.1.29",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-mongodb": "^2.3.0",
     "gatsby-source-strapi": "0.0.10",
     "gatsby-transformer-sharp": "^2.3.13",
     "node-sass": "^4.13.1",
